Refactoring of MetricUtils